Refactor: simplify imports, add @Nullable annotations, replace Collections with List, and switch Hashtable to HashMap in ServiceRegistry